deuxième commit de la branche uncle max avec ajout de détails

--- a/index.html
+++ b/index.html
@@ -7,5 +7,11 @@
         <p>
             Ceci est un paragraphe intéressant 
         </p>
+        <p>
+            Ceci est un paragraphe intéressant ajouté dans la branche uncle MAX
+        </p>
+        <ul>
+            <li>The omnitrix</li>
+        </ul>
     </body>
 </html>
